<resources>
    <string name="app_name">Job NPXS</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="rulse1">1. Do not use any VPN otherwise your account will be banned and you will not get payment</string>
    <string name="rulse2">3. Minimum Withdraw 6500 NPXS tokens</string>
    <string name="rulse3">4. Transfer fee will be deducted</string>
    <string name="rulse4">5. Use Fasted Internet Service for better ads loading</string>
    <string name="rulse5">6. Reffer bonus 500 NPXS token will be added to your account when your refered user will earn 2500 NPXS token</string>
    <string name="rulse6">7. Your Withdraw tokens will be paid within 3 days </string>
    <string name="rulse7">2. You have to complete all the questions and click 50 number questions Ad and wait 60 seconds ! </string>
    <string name="ru">[ Click Finish button and then Click Add points button for add 150 NPXS tokens !! ]</string>


    <string name="privacy1">SS SoftwareHub built the ATOM app as an Ad Supported app. This SERVICE is provided by SS SoftwareHub at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at ATOM unless otherwise defined in this Privacy Policy.</string>

    <string name="p2">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="p3">  Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.  </string>
    <string name="p4">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="p5">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at atomapp007@gmail.com.</string>


</resources>
