<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#F1598C"
    android:layout_height="match_parent"
    tools:context=".RulseActivity">
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#FFF"
                android:text="@string/rulse1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="@string/rulse6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView

                android:textSize="20dp"
                android:layout_margin="5dp"
                android:textColor="#fff"
                android:text="Do not Click any interestitial Ads !!"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>